[package]
name = "disty-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for summarizing lists of numbers"
license = "MIT"
default-run = "disty"
homepage = "http://github.com/swiddis/disty-cli"

[[bin]]
name = "disty"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
rayon = "1.10"
textplots = "0.8.7"
