[package]
name = "disty-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for summarizing lists of numbers"
license = "MIT"
default-run = "disty"
homepage = "http://github.com/swiddis/disty-cli"

[lib]
name = "disty_cli"
path = "src/lib.rs"

[[bin]]
name = "disty"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
rayon = "1.10"
textplots = "0.8.7"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "disty_bench"
harness = false
