[package]
name = "disty-cli"
version = "1.0.0"
edition = "2024"
description = "CLI for summarizing lists of numbers"
license = "MIT"
default-run = "disty"
homepage = "https://github.com/swiddis/disty-cli"
repository = "https://github.com/swiddis/disty-cli"
categories = ["command-line-utilities", "visualization"]
keywords = ["plot", "kde", "distribution", "statistics", "histogram"]

[lib]
name = "disty_cli"
path = "src/lib.rs"

[[bin]]
name = "disty"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
memmap2 = "0.9"
rayon = "1.10"
textplots = "0.8.7"

[dev-dependencies]
tempfile = "3"
criterion = "0.8"

[[bench]]
name = "disty_bench"
harness = false
